--- a/.github/workflows/mockery.yml
+++ b/.github/workflows/mockery.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           go-version: 'stable'
       - name: Generate Mocks
-        run: go run github.com/vektra/mockery/v2
+        run: go tool mockery
       - uses: stefanzweifel/git-auto-commit-action@v6
         name: Commit changes
         with:
