add missing env variable to example

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ DEPLOY_APP_PORT=
 DEPLOY_SSH_PORT=
 DEPLOY_SSH_USER=
 DEPLOY_SSH_KEY_PATH=
+DEPLOY_PROD_ENV_FILE_PATH=
 DEPLOY_OS=
 DEPLOY_ARCH=
 DEPLOY_DOMAIN=
