--- a/.github/workflows/test_external.yml
+++ b/.github/workflows/test_external.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Install dependencies
         run: go mod tidy && cd tests && go mod tidy
       - name: Run tests
-        run: cd tests && go test -timeout 1h ./...
+        run: cd tests && go test -timeout 10m ./...
         
